--- a/index.html
+++ b/index.html
@@ -1,87 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMS Sender</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
+// api/smsProxy.js
+
+export default async function handler(req, res) {
+    const apiUrl = 'https://api.kenliejugarap.com/freesmslbc/';
+
+    if (req.method === 'OPTIONS') {
+        // Handle preflight requests
+        res.setHeader('Access-Control-Allow-Origin', '*'); // Change '*' to your specific domain for security
+        res.setHeader('Access-Control-Allow-Methods', 'POST, GET, OPTIONS');
+        res.setHeader('Access-Control-Allow-Headers', 'Content-Type');
+        res.status(200).end();
+        return;
+    }
+
+    if (req.method === 'POST') {
+        const { number, message } = req.body;
+
+        try {
+            const response = await fetch(apiUrl, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ number, message }),
+            });
+
+            const data = await response.json();
+
+            res.setHeader('Access-Control-Allow-Origin', '*'); // Change '*' to your specific domain for security
+            res.status(response.status).json(data);
+        } catch (error) {
+            console.error('Error sending SMS:', error);
+            res.setHeader('Access-Control-Allow-Origin', '*'); // Change '*' to your specific domain for security
+            res.status(500).json({ status: false, response: 'Failed to send SMS.' });
         }
-        .container {
-            margin-top: 50px;
-        }
-        .result {
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-
-<div class="container">
-    <h2 class="text-center">SMS Sender</h2>
-    <form id="smsForm">
-        <div class="form-group">
-            <label for="phoneNumber">Phone Number:</label>
-            <input type="text" class="form-control" id="phoneNumber" placeholder="Enter phone number" required>
-        </div>
-        <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea class="form-control" id="message" rows="3" placeholder="Enter your message" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">Send SMS</button>
-    </form>
-    <div class="result" id="result"></div>
-</div>
-
-<!-- Bootstrap JS and dependencies -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-// Function to send SMS
-async function sendSms(number, message) {
-    const apiUrl = 'https://api.kenliejugarap.com/freesmslbc/'; // Adjust the URL as necessary
-
-    const payload = {
-        number: number,
-        message: message
-    };
-
-    try {
-        const response = await fetch(apiUrl, {
-            method: 'POST', // Use POST method
-            headers: {
-                'Content-Type': 'application/json' // Specify the content type
-            },
-            body: JSON.stringify(payload) // Convert payload to JSON string
-        });
-
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-        }
-        
-        const data = await response.json();
-        return data;
-    } catch (error) {
-        console.error('Error sending SMS:', error);
-        return { status: false, response: 'Failed to send SMS.' };
+    } else {
+        res.setHeader('Access-Control-Allow-Origin', '*'); // Change '*' to your specific domain for security
+        res.status(405).json({ error: 'Method not allowed' });
     }
 }
-
-// Handle form submission
-document.getElementById('smsForm').addEventListener('submit', async function(event) {
-    event.preventDefault(); // Prevent default form submission
-    const phoneNumber = document.getElementById('phoneNumber').value;
-    const message = document.getElementById('message').value;
-
-    const result = await sendSms(phoneNumber, message);
-    const resultDiv = document.getElementById('result');
-    resultDiv.innerHTML = `<div class="alert alert-${result.status ? 'success' : 'danger'}">${result.response}</div>`;
-});
-</script>
-
-</body>
-</html>
